# xLH

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_modules.bat  setup_modules_phe.bat
docs/de/: browsersync.bat  build.bat  clean.bat  mkdocs.yml
docs/de/docs/: index.md
docs/de/docs/1000_xlh/: 1000_hkp_lfe_orientierung.md
docs/de/docs/2000_beispiele/: 1000_sps.md  2000_portalroboter.md  2000_thermoversuch.md  3000_thermoversuch.md
docs/de/docs/2500_aufgabe/: 0000_einleitung.md  1100_pneumatik.md  1200_logik_vps.md  1300_logik_sps.md  1400_sps_hmi.md  1400_sps_pneumatik_simu.md  1500_sps_hmi.md  1500_sps_pneumatik_simu.md  1600_lin_mot.md  1700_lin_mot_controller.md
docs/de/docs/3000_installation_ibn/: 0000_erste_schritte.md  1000_installation.md  2000_inbetriebnahme_xlh.md  3000_divers.md  _todo.txt
docs/de/includes/: glossar.md
docs/overrides/: main.html  weblink.txt
docs/overrides/partials/: comments.html  copyright.html
docs/overrides/stylesheets/: extra.css
source/xLH_base/: XLH_base_FINAL_01_00.project
source/xLH_base/bibliotheken/: xemax.library
source/xLH_base/io_systeme/: xLH_base_io_ethercat_FINAL_00_10.project  xLH_base_io_ethercat_START_00_10.project
source/xLH_base/lernpfad_hydraulik_vps_sps/: start_fluidsim.bat  start_gateway.bat
source/xLH_base/startprojekt/: XLH_base_START_01_00.project
source/xLH_power/poc_profinet/: GSDML-V2.42-CODESYS-CODESYS PLC-20210927.xml  Profinet_Device_00_03.project  Profinet_Master_00_02.project  Profinet_Master_ET2000_00_02.project  S7_1500_IO.zap18
(+69 files in other folders)
